# PyMoosh

./: .gitignore  LICENSE.txt  MANIFEST.in  PyMoosh.py  README.md  benchmark_coefficients.py  descente_with_adjoint.py  error_coefficients.py  materials.py  myst.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  speed_test_coefficients.py  test_coefficients.py
PyMoosh/: __init__.py  alt_methods.py  anisotropic.py  base.py  classes.py  core.py  grads.py  green.py  incoherent.py  incoherent_vectorized.py  materials.py  models.py  modes.py  non_local.py  non_spec.py  optim.py  optim_algo.py  optimization.py  photo.py  test_pymoosh.py  vectorized.py
code/: Examples.py  PyMoosh.py  materials.py  test_guided.py
data/: material_data.json
examples/: ex_materials.py
mine_PyMoosh/: Surface_Plasmon_Resonance.ipynb  optimization.py  test_mu_disp.py
new_examples/: README.txt  anisotropic_structures.py  anisotropy.py  basic_functions.py  matrix_formalism.py  non_locality.py  optimising.py
new_tests/: README.py  README.txt  basic_functions.py  matrix_formalism  matrix_formalism.py
notebooks/: 1_Readme_first.ipynb  Adapting_matrix_formalism.ipynb  Algorithm_presentation.ipynb  Coupling.ipynb  Ellipsometry.ipynb  Finding_representing_guided_modes.ipynb  Green.ipynb  Guided_modes.ipynb  How_materials_works.ipynb  Materials.ipynb  Non_specular.ipynb  Optimizing_with_PyMoosh.ipynb  Photonic_Crystals_101.ipynb  Photovoltaics.ipynb  Prism_coupling_of_guided_modes.ipynb  SPR.ipynb  Start.ipynb  Surface_plasmon_resonance.ipynb  Total_internal_reflection.ipynb  (+1 more)
(+49 files in other folders)
